style: fix header z-index position

--- a/src/Pages/Home/Components/Header/Header.css
+++ b/src/Pages/Home/Components/Header/Header.css
@@ -1,5 +1,5 @@
 .header{
-    @apply flex items-center justify-between fixed top-3 bg-[#202020] w-4/5 transform -translate-x-1/2 rounded-full py-2 px-2 pl-10 h-16 text-white transition-all duration-150 ease-in-out;
+    @apply flex items-center justify-between fixed top-3 bg-[#202020] w-4/5 transform -translate-x-1/2 rounded-full py-2 px-2 pl-10 h-16 text-white transition-all duration-150 ease-in-out z-10;
 }
 .logo{
     @apply flex font-bold text-lg;
